--- a/src/css/EmotionSelector.css
+++ b/src/css/EmotionSelector.css
@@ -1,6 +1,6 @@
 .radio-section {
-  background-color: #D7EAF1;
-  border: 20px solid #9CCED9;
+  background-color: #D6EAF1;
+  border: 20px solid #83AEBC;
   width: 800px;
   height: 400px;
   border-radius: 60px;
@@ -18,14 +18,14 @@
     justify-content: center; 
     align-items: center;   
     flex-direction: column;
-    border-bottom: 10px solid #9CCED9;
+    border-bottom: 10px solid #83AEBC;
     
 }
 
 .antenna {
   width: 280px;
   height: 15px;
-  background-color: #9CCED9;
+  background-color: #83AEBC;
   position: absolute;
   top: -20px;
   left: 100px;
@@ -36,7 +36,7 @@
 .dial {
   width: 140px;
   height: 30px;
-  background-color: #9CCED9;
+  background-color: #83AEBC;
   border-radius: 15%;
   position: absolute;
   top: -40px;       
@@ -45,7 +45,7 @@
 
 .radio-buttons {
   background-color: #C0DCE7;
-  border: 10px solid #9CCED9;
+  border: 10px solid #83AEBC;
   width: 730px;
   margin-top: 0;
   border-radius: 8px;
@@ -56,20 +56,21 @@
 
 .radio-buttons button {
     margin-top: 0px;
-    font-size: 15px;
-    color:#524438;
+    font-size: 18px;
+    color:#83AEBC;
+    font-weight: 600;
 }
 
 .blank {
     height: 60px;
     width: 60px;
-    border-right: 10px solid #9CCED9;
+    border-right: 10px solid #83AEBC;
 }
 
 .speaker {
   width: 180px;
   height: 180px;
-  border: 10px solid #9CCED9;
+  border: 10px solid #83AEBC;
   background-color: #C0DCE7;
   border-radius: 50%;
   position: absolute;
@@ -84,7 +85,7 @@
 .bar {
   width: 8px;
   height: 80%;
-  background-color: #9CCED9;
+  background-color: #83AEBC;
   border-radius: 7px;
 }
 
@@ -107,6 +108,6 @@
 .line {
   width: 450px;
   height: 12px;
-  background-color: #9CCED9;
+  background-color: #83AEBC;
   border-radius: 6px;
 }
