--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -29,22 +29,23 @@ button{
 }
 
 .radio-icon {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 .cassette-icon {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 .calender-icon {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 .main-page p{
     margin: 0;
+    font-size: 18px;
 } 
 
 
