style: 아이콘 크기 전체적으로 조절

--- a/src/css/Cassettebox.css
+++ b/src/css/Cassettebox.css
@@ -4,7 +4,7 @@
   justify-items: center;
   margin-left: 100px;
   margin-right: 100px;
-  margin-top: 50gitpx;
+  margin-top: 50px;
   margin-bottom: 100px;
 
 }
