--- a/src/css/RecommendationPage.css
+++ b/src/css/RecommendationPage.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    color: #524438;
 }
 
 .recommendation-info{
@@ -24,8 +25,8 @@
 
 .recommendation-info h2 {
     margin-top: 50px;
+    color: #524438;
 }
-
 
 
 .save-button {
@@ -36,6 +37,7 @@
     font-weight: 500;
     border: 5px solid #9CCED9;
 }
+
 
 .close2-button {
   background-color: none;
