--- a/src/css/SavedSongsModal.css
+++ b/src/css/SavedSongsModal.css
@@ -1,4 +1,98 @@
-.modal-top {
-    flex-direction: column;
-    font-size: 18px;
+.song-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
 }
+
+.song-modal-content {
+    padding: 20px;
+    border-radius: 15px;
+    width: 500px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    min-height: 300px;
+    max-height: 70vh; 
+}
+
+.song-modal-content ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex-grow: 1;
+    overflow-y: auto; 
+}
+
+.song-modal-content li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.song-modal-content li img {
+    width: 60px;
+    height: 60px;
+    margin-left: 10px;
+}
+
+.song-modal-content li div {
+    flex-grow: 1;
+}
+
+.song-modal-content li h3 {
+    margin: 3px;
+    font-size: 16px;
+}
+
+.song-modal-content li p {
+    margin: 0;
+    font-size: 14px;
+    color: #666;
+}
+
+.song-modal-content .song-close-button {
+    align-self: flex-end;
+}
+
+.song-modal-content li button {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.song-modal-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.song-modal-top h2 {
+    color: white;
+    text-align: center;
+    flex-grow: 1;
+    margin-left: 90px;
+    font-size: 30px;
+}
+
+.song-modal-top .song-close-button {
+    background: none;
+    border: none;
+    font-size: 20px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+
