--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,13 @@
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-page {
+  flex-grow: 1;
+}
+
 body {
   background-color: #FEFBF3; 
 }
