--- a/src/css/MoodCassetteButton.css
+++ b/src/css/MoodCassetteButton.css
@@ -12,12 +12,13 @@
   cursor: pointer;
   margin: 0;
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 .mood-cassette img {
   width: 250px;
   height: 250px;
+  padding: 0;
 }
 
 
