--- a/src/css/SavedSongsModal.css
+++ b/src/css/SavedSongsModal.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     min-height: 300px;
-    max-height: 70vh; 
+    max-height: 60vh; 
 }
 
 .save-song-modal-content ul {
@@ -41,7 +41,8 @@
 .save-song-modal-content li img {
     width: 60px;
     height: 60px;
-    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
 }
 
 .save-song-modal-content li div {
@@ -94,5 +95,3 @@
     color: #ffffff;
     cursor: pointer;
 }
-
-
