--- a/src/css/EmotionSelector.css
+++ b/src/css/EmotionSelector.css
@@ -52,6 +52,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+  overflow: hidden;
 }
 
 .radio-buttons button {
@@ -59,6 +61,9 @@
     font-size: 16px;
     color:#83AEBC;
     font-weight: 600;
+    position: relative;
+    z-index: 2;
+    background-color: transparent;
 }
 
 .blank {
@@ -110,4 +115,14 @@
   height: 12px;
   background-color: #83AEBC;
   border-radius: 6px;
+}
+
+.mouse-bar {
+  position: absolute;
+  left: 0;
+  width: 5px;
+  height: 100%;
+  background-color: #83AEBC;
+  transition: left 0.2s ease-out;
+  z-index: 1;
 }
