--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  flex: 1;
 }
 
 .main-page {
-  flex-grow: 1;
+  flex: 1;
 }
 
 body {
