--- a/src/css/MoodCassetteButton.css
+++ b/src/css/MoodCassetteButton.css
@@ -21,6 +21,10 @@
   padding: 0;
 }
 
+.mood-cassette button:hover img {
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+}
 
 .mood-cassette p {
   font-size: 20px;
