--- a/src/css/CassetteBoxHeader.css
+++ b/src/css/CassetteBoxHeader.css
@@ -20,3 +20,8 @@
     padding: 0;
 }
 
+.cassettebox-header button:hover {
+    color: #AA98BB;
+    background-color: #ffffff;
+    transition: all 0.3s ease-in-out;
+}
